syntax = "proto3";

package raft;

option go_package = "./proto;raftpb";

service Raft {
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc AppendEntries (AppendRequest) returns (AppendResponse);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

message VoteRequest {
  int32 term = 1;
  string candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message VoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendRequest {
  int32 term = 1;
  string leaderId = 2;
  repeated string entries = 3;
  int32 leaderCommit = 4;
}

message AppendResponse {
  int32 term = 1;
  bool success = 2;
}

message HeartbeatRequest {
  int32 term = 1;
  string leaderId = 2;
}

message HeartbeatResponse {
  bool success = 1;
}
